src/antish/example/correct/StdLib.ha
move = { Move; }
turn x = { Turn x; }
left = Left
right = Right
