src/antish/example/fail/rec-bad.ha

main = {
    f;
}

f = {
    if Foe Ahead then {
        Move;
        f;
        Turn Left;
    }
}
